--- a/view/index.jade
+++ b/view/index.jade
@@ -1,9 +1,3 @@
-<h1><%= title %></h1>
-<ul>
-<% for(var i=0; i<supplies.length; i++) { %>
-<li>
-<a href='supplies/<%= supplies[i] %>'>
-<%= supplies[i] %>
-</a>
-</li>
-<% } %>
+<h1>test2</h2>
+<body>555555555555555555555555555555
+</body>
