--- a/view/index.jade
+++ b/view/index.jade
@@ -1,3 +1,7 @@
-<h1>test2</h2>
-<body>555555555555555555555555555555
-</body>
+doctype html
+html
+    head
+        title Jade Page
+    body
+        h1 This page is produced by Jade engine
+        p some paragraph here..
